[package]
name = "bounded-vec"
version = "0.6.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2018"
description = "Non-empty rust Vec wrapper with type guarantees on lower and upper bounds for items quantity."
repository = "https://github.com/ergoplatform/bounded-vec"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1"
serde = {version = "1.0.123", features = ["derive"], optional = true}

[dev-dependencies]
